# dev.bitshares.works

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  repositories_map.md  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue_request.md  link_information_request.md  new_content_idea.md
ISSUE_TEMPLATE/: new_content_idea.md
docs/: README.rst  conf.py  index.rst  requirements.txt
docs/api/: api_about.rst  blockchain-objects-ids.rst  blockchain_api.rst  calls.rst  index_api.rst  namespaces.rst  objects_ids.rst  often-used-calls.rst  op_docs.rst  restrictions.rst  rpc.rst  tryitout.rst  wallet_api.rst  websocket.rst
docs/bts_guide/: apis-faq.rst  assets-faq.rst  cli-faq.rst  dev_faq.rst  index_faq.rst  witness-faq.rst
docs/components/: components.rst  lib_app.rst  lib_block.rst  lib_chain_db.rst  lib_database.rst  lib_db.rst  lib_evalustors.rst  lib_net.rst  lib_objects.rst  lib_operations.rst  lib_plugins.rst  lib_protocols.rst  lib_wallet.rst
docs/development/: bitshares-zero-to-sixty.rst  bsip.rst  index_cli.rst  index_cli.rst copy  index_node.rst  index_usecases.rst  installation.rst  next-step.rst  testnets.rst
docs/intro/: architectures.rst  environments.rst  features.rst
docs/knowledge_base/: bitshares-ui-wallet-account-mode.md  bsip_funding.md  files_methods_lists.md  glossary.md  glossary.rst  index_kb.rst  index_kb_dummy.rst  op_docs.rst  trn_proposed_notes.md  trn_proposed_notes.rst  trn_proposed_transactions.md  trn_proposed_transactions.rst
forge/: indexSteps.rst  indexdev.md
(+198 files in other folders)
